--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -10,24 +10,41 @@ section {
   width: 600px;
 }
 
-.gallery {
-  width: 90%;
-  margin: 0 auto;
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-  grid-gap: 20px;
-  justify-content: center;
-  align-items: center;
-}
+.gallery {    
+  line-height: 0;       
+   -webkit-column-count: 5;    
+   -webkit-column-gap: 0px;    
+   -moz-column-count: 5;
+   -moz-column-gap: 0px;
+    column-count: 5;    
+    column-gap: 0px;    
+  display:inline-block;    
+  margin-right: auto;    
+  margin-left: auto;  
+}  
+.gallery-img {    
+  width: 100% !important;    
+  height: auto !important;  
+}  
 
-.gallery-div { /* contains the image */
-  width: 200px;
-  height: 200px;
-  cursor: pointer;
-  transition: transform 0.2s;
-  list-style-type: none;
-}
-
-.gallery-img {
-  object-fit: contain;
-}
+@media (max-width: 1000px) {
+  .gallery {
+  -moz-column-count:    3;
+  -webkit-column-count: 3;
+  column-count:         3;
+  }
+ }  
+@media (max-width: 800px) {
+  .gallery {
+  -moz-column-count:    2;
+  -webkit-column-count: 2;
+  column-count:         2;
+  }
+ }  
+@media (max-width: 400px) {
+  .gallery {
+  -moz-column-count:    1;
+  -webkit-column-count: 1;
+   column-count:        1;
+  }
+ }
