Test #2 make sticky header

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -32,4 +32,8 @@ footer {
 .gallery-img {    
   width: 100% !important;    
   height: auto !important;  
-}  
+}
+
+.sticky {
+  position: sticky;
+}
