--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -8,9 +8,56 @@
 }
 
 .grid > div {
-  border: solid 1px #a3a5ad;
+  /*border: solid 1px #a3a5ad;*/
   aspect-ratio: 3 / 4;
-  box-shadow: 1px 2px lightgrey;
+  border-radius: 3px;
+  overflow: hidden;
+  position: relative;
+
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
+}
+
+.grid > div img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: 50% 50%;
+}
+
+.project-card-title {
+  position: absolute;
+  top: 10px;
+  left: 0;
+  right: 0;
+  padding: 5px 15px;
+
+  color: #fff;
+  font-family: Roboto, Helvetica, Arial, sans-serif;
+
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+  font-size: 16px;
+  visibility: hidden;
+  filter: none;
+}
+
+.grid > div:hover {
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+}
+
+.grid > div:hover img {
+  filter: brightness(70%);
+}
+
+.grid > div:hover .project-card-title {
+  visibility: visible;
+  filter: none;
+}
+
+.project-card-title:hover {
+  visibility: visible;
 }
 
 /* horizontal lines */
@@ -22,8 +69,8 @@
   margin: 20px 0;
   font-weight: bold;
   width: max(
-    round(down, 100%, 260px) - 20px, /* snap to grid columns */
-    240px /* width can't be smaller than this */
+    round(down, 100%, 260px) - 20px,
+    /* snap to grid columns */ 240px /* width can't be smaller than this */
   );
 }
 
