--- a/styles/main.css
+++ b/styles/main.css
@@ -5,7 +5,7 @@ body {
   background: #f5f5f4;
 }
 
-.main {
+#main {
   padding: 0px 10px;
   margin: 70px 350px 50px 350px; /* margin-left is same as the width of the sidebar */
 }
